@@ -1,6 +1,6 @@
 % File src/library/methods/man/cbind2.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2015 R Core Team
 % Copyright 2001-2011 The R Foundation
 % Distributed under GPL 2 or later
 
@@ -22,19 +22,32 @@
   methods.
 }
 \details{
-  The main use of \code{cbind2} (\code{rbind2}) is to be called by
-  \code{\link{cbind}()}  (\code{rbind()})
-  \bold{if} these are activated.  This allows \code{cbind}
-  (\code{rbind}) to work for formally classed (aka \sQuote{S4})
-  objects by providing S4 methods for these objects.  Currently, a call\cr
-  \code{methods:::bind_activation(TRUE)}\cr
-  is needed to install a
-  \code{cbind2}-calling version of \code{cbind} (into the
-  \pkg{base} namespace) and the same for \code{rbind}.\cr
-  \code{methods:::bind_activation(FALSE)} reverts to the
-  previous internal version of \code{cbind} which does not build on
-  \code{cbind2}, see the examples.
+  The main use of \code{cbind2} (\code{rbind2}) is to be called
+  recursively by \code{\link{cbind}()} (\code{rbind()}) when both of
+  these requirements are met:
+  \itemize{
+    \item{There is at least one argument that is an S4 object,
+      and}
+    \item{S3 dispatch fails (see the Dispatch section under \link{cbind}).}
+  }
+  The methods on \code{cbind2} and \code{rbind2} effectively define the
+  type promotion policy when combining a heterogeneous set of
+  arguments. The homogeneous case, where all objects derive from some S4
+  class, can be handled via S4 dispatch on the \code{\dots} argument via
+  an externally defined S4 \code{cbind} (\code{rbind}) generic.
+
+  Since (for legacy reasons) S3 dispatch is attempted first, it is
+  generally a good idea to additionally define an S3 method on
+  \code{cbind} (\code{rbind}) for the S4 class. The S3 method will be
+  invoked when the arguments include objects of the S4 class, along with
+  parameters of types for which no S3 method exists. Also, in case there
+  is an argument that selects a different S3 method (like the one for
+  \code{data.frame}), this S3 method serves to introduce an ambiguity in
+  dispatch that triggers the recursive fallback to \code{cbind2}
+  (\code{rbind2}). Otherwise, the other S3 method would be called, which
+  may not be appropriate.
 }
+
 \usage{
 cbind2(x, y, ...)
 rbind2(x, y, ...)
@@ -67,6 +80,7 @@ cbind2(1:3, 4)
 m <- matrix(3:8, 2,3, dimnames=list(c("a","b"), LETTERS[1:3]))
 cbind2(1:2, m) # keeps dimnames from m
 
+\dontshow{
 ### Note: Use the following activation if you want cbind() to work
 ### ----  on S4 objects -- be careful otherwise!
 
@@ -76,17 +90,16 @@ cbind(a=1:3)# no call to cbind2()
 cbind(a=1:3, four=4, 7:9)# calling cbind2() twice
 untrace("cbind2")
 
-\dontshow{
 cbind(m,m+1,m+2)
 cbind(m,a=1, ch=c("D","E"))
 cbind(1,a=1:3, m) # ok with a warning
 cbind(A=1, B=3, m, C=4)
-}
 
 cbind(m, a=1, b=3)
 
 ## turn off the `special cbind()' :
 methods:::bind_activation(FALSE)
+}
 }
 \keyword{array}
 \keyword{manip}
